--- a/index.html
+++ b/index.html
@@ -16,12 +16,35 @@
     <header>
         <h1 class="m-0 pb-5 bg-primary">Weather Dashboard</h1>
     </header>
+
+    <!-- Geolocation Modal -->
+    <div id="myModal" class="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="mt-2 btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Forecast Layout  -->
     <div class="container-fluid">
         <div class="row">
             <div id="search-column" class="d-flex flex-column min-vh-100 col-3 bg-secondary">
                 <h3 class="m-0 pb-2 text-center">Search for a City:</h3>
                 <input id="city-input" class="m-0 mb-2" placeholder="Enter City">
-                <button id="search-btn" type="button" class="btn btn-primary btn-lg">Search</button>
+                <button id="search-btn" type="button" class="mb-2 btn btn-primary btn-lg">Search</button>
+                <button id="current-btn" type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">Current Location</button>
+                <hr>
                 <div id="city-btns" class="mt-2 list-group"></div>
             </div>
             <div id="weather-info-container" class="min-vh-100 col-9 bg-light">
@@ -70,22 +93,13 @@
                         <p class="card-wind">Wind</p>
                         <p class="card-humidity">Humidity</p>
                     </div>
-                    <!-- <div class="h-100 forecast-card-2 card m-2 border border-1 border-dark" style="width: 10rem;">Test Card INfo
-                    </div>
-                    <div class="h-100 forecast-card-3 card m-2 border border-1 border-dark" style="width: 10rem;">Test Card INfo
-                    </div>
-                    <div class="h-100 forecast-card-4 card m-2 border border-1 border-dark" style="width: 10rem;">Test Card INfo
-                    </div>
-                    <div class="h-100 forecast-card-5 card m-2 border border-1 border-dark" style="width: 10rem;">Test Card INfo
-                    </div> -->
-
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./js/javascript.js"></script>
 </body>
 </html>
