Added search list city button listener and modal text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p>Modal body text goes here.</p>
+            <p id="modal-txt">Modal body text goes here.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -42,7 +42,7 @@
             <div id="search-column" class="d-flex flex-column min-vh-100 col-3 bg-secondary">
                 <h3 class="m-0 pb-2 text-center">Search for a City:</h3>
                 <input id="city-input" class="m-0 mb-2" placeholder="Enter City">
-                <button id="search-btn" type="button" class="mb-2 btn btn-primary btn-lg">Search</button>
+                <button id="search-btn" autofocus type="button" class="mb-2 btn btn-primary btn-lg">Search</button>
                 <button id="current-btn" type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">Current Location</button>
                 <hr>
                 <div id="city-btns" class="mt-2 list-group"></div>
