--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
+            <h5 class="modal-title">Current Position</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p id="modal-txt">Modal body text goes here.</p>
+            <p id="modal-txt"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="mt-2 btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
