--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
     <title>Daily Weather</title>
 </head>
 <body class="bg-dark">
@@ -49,11 +52,12 @@
             <div id="weather-info-container" class="min-vh-100 col-9 bg-light">
                 <h2 class="text-center"></h3>
                 <div id="city-container" class="mb-3 p-3 border border-1 border-dark">
-                    <h2 id="city-current-weather">City Container</h2>
-                    <p id="current-temp">Temp</p>
-                    <p id="current-wind">Wind</p>
-                    <p id="current-humidity">Humidty</p>
-                    <p id="current-uv-index">UV index</p>
+                    <h2 id="city-current-weather"></h2>
+                    <img id="w-icon">
+                    <p id="current-temp"></p>
+                    <p id="current-wind"></p>
+                    <p id="current-humidity"></p>
+                    <p id="current-uv-index"></p>
                 </div>
                 <div id="forecast-container" class="card-group row">
                     <h2 class="text-center">5-Day Forecast</h2>
@@ -98,6 +102,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./js/javascript.js"></script>
 </body>
