Added CurrentWeather class, dynamically created

--- a/index.html
+++ b/index.html
@@ -51,14 +51,7 @@
             </div>
             <div id="weather-info-container" class="min-vh-100 col-9 bg-light">
                 <h2 class="text-center"></h3>
-                <div id="city-container" class="mb-3 p-3 border border-1 border-dark">
-                    <h2 id="city-current-weather"></h2>
-                    <img id="w-icon">
-                    <p id="current-temp"></p>
-                    <p id="current-wind"></p>
-                    <p id="current-humidity"></p>
-                    <p id="current-uv-index"></p>
-                </div>
+                <div id="city-container" class="mb-3 p-3 border border-1 border-dark"></div>
                 <h2 class="text-center">5-Day Forecast</h2>
                 <div id="forecast-container" class="card-group row">
                 </div>
