--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div id="city-btns" class="mt-2 list-group"></div>
             </div>
             <div id="weather-info-container" class="min-vh-100 col-9 bg-light">
-                <h2 class="text-center"></h3>
-                <div id="city-container" class="mb-3 p-3 border border-1 border-dark"></div>
+                <h2 class="text-center">Today's Current Weather</h3>
+                <div id="city-container" class="mb-3 p-1 border border-1 border-dark"></div>
                 <h2 class="text-center">5-Day Forecast</h2>
                 <div id="forecast-container" class="card-group row">
                 </div>
